kubernetes/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploysafe-preview-service
  namespace: deploysafe

spec:
  type: ClusterIP

  selector:
    app: deploysafe

  ports:
    - port: 80
      targetPort: 8000
